# data_foundry

./: .gitignore  Makefile  README.md  generate_xlsx.py  pom.xml  start-agent.cmd  start-all.ps1  start-backend.cmd  start-frontend-dev.cmd  start-scheduler.cmd  stop-all-simple.cmd  test_import_dim.csv  test_import_dim.xlsx
data-foundry-agent/: Makefile  README.md  pyproject.toml
data-foundry-agent-service/: pom.xml
data-foundry-agent/app/: __init__.py  main.py  mock_service.py  schemas.py
data-foundry-agent/tests/: test_api.py
data-foundry-backend/: Makefile  README.md  pyproject.toml
data-foundry-backend-service/: pom.xml
data-foundry-backend/app/: database.py  main.py  modeling.py  repository.py  schemas.py  seed_data.py
data-foundry-backend/app/routers/: backfill.py  fetch_tasks.py  platform_config.py  projects.py  requirements.py  schedule_jobs.py  task_groups.py  wide_table_rows.py  wide_tables.py
data-foundry-backend/app/services/: agent_service.py  cron_loop.py  execution_service.py  prompt_service.py  scheduler_service.py  task_plan_service.py  wide_table_service.py
data-foundry-backend/tests/: test_ad_safe_execution.py  test_api_crud.py  test_modeling.py  test_repository.py  test_scheduler_properties.py  test_scheduler_ready_gate.py  test_scheduler_service.py
data-foundry-common-core/: pom.xml
data-foundry-frontend/: COLLECTION_TASK_AGENT_PROMPT.md  Makefile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.requirement-definition-finish.tsbuildinfo  tsconfig.requirement-definition-stage1.tsbuildinfo  (+5 more)
docs/: AGENTS.md  (+51 more)
(+572 files in other folders)
