[project]
name = "data-foundry-agent"
version = "0.1.0"
description = "Mock collection agent service for Data Foundry"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.2",
]
